--- a/index.html
+++ b/index.html
@@ -9,116 +9,147 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html" lang="en" class="logo-header link"
-          ><span class="accent">Web</span>Studio</a
-        >
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link current">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+    <header class="header">
+      <div class="container">
+        <nav>
+          <a href="./index.html" lang="en" class="logo-header link"
+            ><span class="accent">Web</span>Studio</a
+          >
+          <ul class="site-nav list">
+            <li><a href="./index.html" class="link current">Студия</a></li>
+            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="auth-nav list">
+          <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
-      </nav>
-      <ul class="auth-nav list">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">
-          Эффективные решения <br />
-          для вашего бизнеса
-        </h1>
-        <button type="button" class="hero-btn">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
+          <button type="button" class="hero-btn">Заказать услугу</button>
+        </div>
       </section>
       <section class="features">
-        <!-- В CSS скроем заголовок -->
-        <h2 class="visually-hidden">Наши преимущества</h2>
-        <ul class="list">
-          <li>
-            <h3 class="features-title">Внимание к деталям</h3>
-            <p class="features-text">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Пунктуальность</h3>
-            <p class="features-text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Планирование</h3>
-            <p class="features-text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Современные технологии</h3>
-            <p class="features-text">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <!-- В CSS скроем заголовок -->
+          <h2 class="visually-hidden">Наши преимущества</h2>
+          <ul class="list">
+            <li>
+              <h3 class="features-title">Внимание к деталям</h3>
+              <p class="features-text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-title">Пунктуальность</h3>
+              <p class="features-text">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-title">Планирование</h3>
+              <p class="features-text">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-title">Современные технологии</h3>
+              <p class="features-text">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="activity">
-        <h2 class="activity-title">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li><img src="./images/img1.jpg" alt="Написание кода" width="370" /></li>
-          <li><img src="./images/img2.jpg" alt="Проектирование интерфейса" width="370" /></li>
-          <li><img src="./images/img3.jpg" alt="Выбор цветовой палитры" width="370" /></li>
-        </ul>
+        <div class="container">
+          <h2 class="activity-title">Чем мы занимаемся</h2>
+          <ul class="list">
+            <li><img src="./images/img1.jpg" alt="Написание кода" width="370" /></li>
+            <li><img src="./images/img2.jpg" alt="Проектирование интерфейса" width="370" /></li>
+            <li><img src="./images/img3.jpg" alt="Выбор цветовой палитры" width="370" /></li>
+          </ul>
+        </div>
       </section>
       <section class="team">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/avatar1.jpg" alt="Игорь" width="270" />
-            <h3 class="team-name">Игорь Демьяненко</h3>
-            <p class="team-position">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/avatar2.jpg" alt="Ольга" width="270" />
-            <h3 class="team-name">Ольга Репина</h3>
-            <p class="team-position">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/avatar3.jpg" alt="Николай" width="270" />
-            <h3 class="team-name">Николай Тарасов</h3>
-            <p class="team-position">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/avatar4.jpg" alt="Михаил" width="270" />
-            <h3 class="team-name">Михаил Ермаков</h3>
-            <p class="team-position">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="list">
+            <li>
+              <img src="./images/avatar1.jpg" alt="Игорь" width="270" />
+              <div class="team-description">
+                <h3 class="team-name">Игорь Демьяненко</h3>
+                <p class="team-position">Product Designer</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/avatar2.jpg" alt="Ольга" width="270" />
+              <div class="team-description">
+                <h3 class="team-name">Ольга Репина</h3>
+                <p class="team-position">Frontend Developer</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/avatar3.jpg" alt="Николай" width="270" />
+              <div class="team-description">
+                <h3 class="team-name">Николай Тарасов</h3>
+                <p class="team-position">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/avatar4.jpg" alt="Михаил" width="270" />
+              <div class="team-description">
+                <h3 class="team-name">Михаил Ермаков</h3>
+                <p class="team-position">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" lang="en" class="logo-footer link"
-        ><span class="inversion">Web</span>Studio</a
-      >
-      <address>
-        <ul class="list">
-          <li>
-            <a
-              href="https://goo.gl/maps/A3jN7ZT46rbYVK1a7"
-              target="_blank"
-              rel="noopener nofollow noreferrer"
-              class="maps link"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li><a href="mailto:info@example.com" class="link-footer link">info@example.com</a></li>
-          <li><a href="tel:+380991111111" class="link-footer link">+38 099 111 11 11</a></li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" lang="en" class="logo-footer link"
+          ><span class="inversion">Web</span>Studio</a
+        >
+        <address>
+          <ul class="list">
+            <li class="list-item">
+              <a
+                href="https://goo.gl/maps/A3jN7ZT46rbYVK1a7"
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+                class="maps link"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="list-item">
+              <a href="mailto:info@example.com" class="link-footer link">info@example.com</a>
+            </li>
+            <li class="list-item">
+              <a href="tel:+380991111111" class="link-footer link">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
