Добавляет сетку элементов

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,15 +44,15 @@
         <div class="container">
           <!-- В CSS скроем заголовок -->
           <h1 class="visually-hidden">Наши работы</h1>
-          <ul class="list">
-            <li><button type="button" class="filter-btn">Все</button></li>
-            <li><button type="button" class="filter-btn">Веб-сайты</button></li>
-            <li><button type="button" class="filter-btn">Приложения</button></li>
-            <li><button type="button" class="filter-btn">Дизайн</button></li>
-            <li><button type="button" class="filter-btn">Маркетинг</button></li>
+          <ul class="btn-list list">
+            <li class="btn-item"><button type="button" class="filter-btn">Все</button></li>
+            <li class="btn-item"><button type="button" class="filter-btn">Веб-сайты</button></li>
+            <li class="btn-item"><button type="button" class="filter-btn">Приложения</button></li>
+            <li class="btn-item"><button type="button" class="filter-btn">Дизайн</button></li>
+            <li class="btn-item"><button type="button" class="filter-btn">Маркетинг</button></li>
           </ul>
-          <ul class="list">
-            <li>
+          <ul class="portfolio-list list">
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img src="./images/picture1.jpg" alt="Технокряк" width="370" />
                 <div class="portfolio-description">
@@ -61,7 +61,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img
                   src="./images/picture2.jpg"
@@ -74,7 +74,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img src="./images/picture3.jpg" alt="Ресторан Seafood" width="370" />
                 <div class="portfolio-description">
@@ -83,7 +83,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img src="./images/picture4.jpg" alt="Проект Prime" width="370" />
                 <div class="portfolio-description">
@@ -92,7 +92,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img src="./images/picture5.jpg" alt="Проект Boxes" width="370" />
                 <div class="portfolio-description">
@@ -101,7 +101,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img src="./images/picture6.jpg" alt="Inspiration has no Borders" width="370" />
                 <div class="portfolio-description">
@@ -110,7 +110,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img src="./images/picture7.jpg" alt="Издание Limited Edition" width="370" />
                 <div class="portfolio-description">
@@ -119,7 +119,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img src="./images/picture8.jpg" alt="Проект LAB" width="370" />
                 <div class="portfolio-description">
@@ -128,7 +128,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img src="./images/picture9.jpg" alt="Growing Business" width="370" />
                 <div class="portfolio-description">
