--- a/index.html
+++ b/index.html
@@ -53,26 +53,26 @@
         <div class="container">
           <!-- В CSS скроем заголовок -->
           <h2 class="visually-hidden">Наши преимущества</h2>
-          <ul class="list">
-            <li>
+          <ul class="features-list list">
+            <li class="features-item">
               <h3 class="features-title">Внимание к деталям</h3>
               <p class="features-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="features-title">Пунктуальность</h3>
               <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="features-title">Планирование</h3>
               <p class="features-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="features-title">Современные технологии</h3>
               <p class="features-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -84,39 +84,45 @@
       <section class="activity">
         <div class="container">
           <h2 class="activity-title">Чем мы занимаемся</h2>
-          <ul class="list">
-            <li><img src="./images/img1.jpg" alt="Написание кода" width="370" /></li>
-            <li><img src="./images/img2.jpg" alt="Проектирование интерфейса" width="370" /></li>
-            <li><img src="./images/img3.jpg" alt="Выбор цветовой палитры" width="370" /></li>
+          <ul class="activity-list list">
+            <li class="activity-item">
+              <img src="./images/img1.jpg" alt="Написание кода" width="370" />
+            </li>
+            <li class="activity-item">
+              <img src="./images/img2.jpg" alt="Проектирование интерфейса" width="370" />
+            </li>
+            <li class="activity-item">
+              <img src="./images/img3.jpg" alt="Выбор цветовой палитры" width="370" />
+            </li>
           </ul>
         </div>
       </section>
       <section class="team">
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
-          <ul class="list">
-            <li>
+          <ul class="team-list list">
+            <li class="team-item">
               <img src="./images/avatar1.jpg" alt="Игорь" width="270" />
               <div class="team-description">
                 <h3 class="team-name">Игорь Демьяненко</h3>
                 <p class="team-position">Product Designer</p>
               </div>
             </li>
-            <li>
+            <li class="team-item">
               <img src="./images/avatar2.jpg" alt="Ольга" width="270" />
               <div class="team-description">
                 <h3 class="team-name">Ольга Репина</h3>
                 <p class="team-position">Frontend Developer</p>
               </div>
             </li>
-            <li>
+            <li class="team-item">
               <img src="./images/avatar3.jpg" alt="Николай" width="270" />
               <div class="team-description">
                 <h3 class="team-name">Николай Тарасов</h3>
                 <p class="team-position">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="team-item">
               <img src="./images/avatar4.jpg" alt="Михаил" width="270" />
               <div class="team-description">
                 <h3 class="team-name">Михаил Ермаков</h3>
